kubernetes/minio/pycount-minio-deploy.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: pycount-minio
  namespace: pycount
spec:
  selector:
    matchLabels:
      app: pycount-minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: pycount-minio
    spec:
      # Refer to the PVC created earlier
      volumes:
        - name: storage
          persistentVolumeClaim:
            # Name of the PVC created earlier
            claimName: pycount-minio-pvc
      containers:
        - name: minio
          # Pulls the default Minio image from Docker Hub
          image: minio/minio:latest
          args:
            - server
            - /storage
          ports:
            - containerPort: 9000
              hostPort: 9000
          # Mount the volume into the pod
          volumeMounts:
            - name: storage # must match the volume name, above
              mountPath: "/storage"
