kubernetes/minio/pycount-minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pycount-minio-ingress
  namespace: pycount
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pycount-minio-svc
                port:
                  number: 9000
      host: pycount-minio.duratm.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pycount-minio-svc
                port:
                  number: 9001
      host: pycount-minio-admin.duratm.com
